# lingo

./: Cargo.toml
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  syntax_kind.rs
crates/parser/src/syntax_kind/: generated.rs
crates/syntax/: Cargo.toml
xtask/: Cargo.toml
xtask/assets/: ast_src.toml
xtask/src/: codegen.rs  main.rs  utils.rs
xtask/src/codegen/: kinds_src.rs
