[package]
name = "lingo"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "crates/*",
    "xtask",
]

exclude = [
    "crates/repl"
]

[[bin]]
name = "lingo-repl"
path = "crates/repl/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
