[package]
name = "xtask"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
proc-macro2 = "1.0.24"
quote = "1.0.8"
serde = { version = "1.0.123", features = ["derive"] }
syn = "1.0.60"
toml = "0.5.8"
xshell = "0.1.8"
